# wineditline

./: .gitignore  CMakeLists.txt  ChangeLog
examples/: CMakeLists.txt
src/: CMakeLists.txt  config.h.in  editline.c  el_globals.c  el_globals.h  fn_complete.c  history.c
src/editline/: readline.h  wineditline.h
